[gd_scene load_steps=4 format=3 uid="uid://huud2d1k4lna"]

[ext_resource type="Script" uid="uid://dgdy512m8uqxl" path="res://ui/focus_chat_overlay.gd" id="1_uni3w"]
[ext_resource type="Texture2D" uid="uid://b17ro24t8kfnc" path="res://assets/character/火柴人.png" id="2_dbeha"]
[ext_resource type="Texture2D" uid="uid://b17ro24t8kfnc" path="res://assets/character/火柴人.png" id="3_606dk"]

[node name="FocusChatOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uni3w")

[node name="LeftCharacter" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -295.0
offset_right = 171.0
grow_vertical = 0
texture = ExtResource("2_dbeha")
stretch_mode = 4

[node name="RightCharacter" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_bottom = 344.0
grow_horizontal = 0
texture = ExtResource("3_606dk")
stretch_mode = 4

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "test"

[node name="ChatLabel" type="RichTextLabel" parent="Panel/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "testte"
fit_content = true
